@@ -5,6 +5,7 @@ LIST OF CHANGES
  - use lowload lsf queue
  - seqchksum_comparator to cope with higher plexing (with a chdir)
  - force HiSeq rapid run V2 flowcells (BCXX suffix) to use P4
+ - enable p4 single-end processing (bwa mem only, not RNA or non-consented human split)
 
 release 48.3
  - get informatrion about a spike directly from lims
